--- a/README.Rmd
+++ b/README.Rmd
@@ -13,7 +13,8 @@ knitr::opts_chunk$set(
 
 # BioPAN_Tutorial
 
-This is the source code for this [web page](https://jauntyjjs.github.io/BioPAN_Tutorial/)
+This is the source code for this [web page](https://jauntyjjs.github.io/BioPAN_Tutorial/).
+
 The goal of BioPAN_Tutorial is to show how BioPAN works with a small running example.
 
 ## Render into html document
