Fix the picture problem

--- a/index.Rmd
+++ b/index.Rmd
@@ -51,6 +51,7 @@ knitr::opts_chunk$set(
   fig.path = "figures/",
   fig.height = figheight,
   fig.width = figwidth,
+  fig.align = "center",
   # See https://community.rstudio.com/t/centering-images-in-blogdown-post/20962
   # to learn how to center images
   # See https://bookdown.org/yihui/rmarkdown-cookbook/opts-tidy.html
@@ -70,9 +71,7 @@ This document helps to explain how the number displayed in the BioPAN software a
 
 [BioPAN](https://f1000research.com/articles/10-4) [@BIOPAN] is a tool found in [LIPID MAPS](https://lipidmaps.org/biopan) designed to automate biosynthetic pathway analysis of lipids.
 
-<p align="center">
 ![](figures/giz061_ActivePCtoPStoPE_pathway.PNG)
-</p>
 
 Below is a [YouTube video](https://www.youtube.com/watch?v=EfTC_LuR3ak) on how to use BioPAN.
 
@@ -82,9 +81,7 @@ Below is a [YouTube video](https://www.youtube.com/watch?v=EfTC_LuR3ak) on how t
 
 The [documentation](https://www.lipidmaps.org/biopan/doc/step3_build.html) of BioPAN provides a technical explanation of how the pathway scores are calculated.
 
-<p align="center">
 ![](figures/giz061_BioPAN_techincal_details.PNG)
-</p>
 
 More information can be found in this [paper](https://doi.org/10.1016/j.copbio.2016.10.003) [@NGUYEN201796]
 
